; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_ip6_output.c_ip6_pcbopt.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_ip6_output.c_ip6_pcbopt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip6_pktopts = type { i32 }

@M_IP6OPT = common dso_local global i32 0, align 4
@M_WAITOK = common dso_local global i32 0, align 4
@ENOBUFS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32, %struct.ip6_pktopts**, i32)* @ip6_pcbopt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ip6_pcbopt(i32 %0, i32* %1, i32 %2, %struct.ip6_pktopts** %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.ip6_pktopts**, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.ip6_pktopts*, align 8
  store i32 %0, i32* %7, align 4
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store %struct.ip6_pktopts** %3, %struct.ip6_pktopts*** %10, align 8
  store i32 %4, i32* %11, align 4
  %13 = load %struct.ip6_pktopts**, %struct.ip6_pktopts*** %10, align 8
  %14 = load %struct.ip6_pktopts*, %struct.ip6_pktopts** %13, align 8
  store %struct.ip6_pktopts* %14, %struct.ip6_pktopts** %12, align 8
  %15 = load %struct.ip6_pktopts*, %struct.ip6_pktopts** %12, align 8
  %16 = icmp eq %struct.ip6_pktopts* %15, null
  br i1 %16, label %17, label %30

17:                                               ; preds = %5
  %18 = load i32, i32* @M_IP6OPT, align 4
  %19 = load i32, i32* @M_WAITOK, align 4
  %20 = call %struct.ip6_pktopts* @_MALLOC(i32 4, i32 %18, i32 %19)
  store %struct.ip6_pktopts* %20, %struct.ip6_pktopts** %12, align 8
  %21 = load %struct.ip6_pktopts*, %struct.ip6_pktopts** %12, align 8
  %22 = icmp eq %struct.ip6_pktopts* %21, null
  br i1 %22, label %23, label %25

23:                                               ; preds = %17
  %24 = load i32, i32* @ENOBUFS, align 4
  store i32 %24, i32* %6, align 4
  br label %37

25:                                               ; preds = %17
  %26 = load %struct.ip6_pktopts*, %struct.ip6_pktopts** %12, align 8
  %27 = call i32 @ip6_initpktopts(%struct.ip6_pktopts* %26)
  %28 = load %struct.ip6_pktopts*, %struct.ip6_pktopts** %12, align 8
  %29 = load %struct.ip6_pktopts**, %struct.ip6_pktopts*** %10, align 8
  store %struct.ip6_pktopts* %28, %struct.ip6_pktopts** %29, align 8
  br label %30

30:                                               ; preds = %25, %5
  %31 = load i32, i32* %7, align 4
  %32 = load i32*, i32** %8, align 8
  %33 = load i32, i32* %9, align 4
  %34 = load %struct.ip6_pktopts*, %struct.ip6_pktopts** %12, align 8
  %35 = load i32, i32* %11, align 4
  %36 = call i32 @ip6_setpktopt(i32 %31, i32* %32, i32 %33, %struct.ip6_pktopts* %34, i32 1, i32 0, i32 %35)
  store i32 %36, i32* %6, align 4
  br label %37

37:                                               ; preds = %30, %23
  %38 = load i32, i32* %6, align 4
  ret i32 %38
}

declare dso_local %struct.ip6_pktopts* @_MALLOC(i32, i32, i32) #1

declare dso_local i32 @ip6_initpktopts(%struct.ip6_pktopts*) #1

declare dso_local i32 @ip6_setpktopt(i32, i32*, i32, %struct.ip6_pktopts*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
